log
Wed 03 May 2023 03:37:21 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
58a0e25
Wed 03 May 2023 03:37:37 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
51c04c4
Wed 03 May 2023 03:37:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f884d95
Wed 03 May 2023 03:39:33 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
30b4827
Wed 03 May 2023 03:40:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ec058b2
Wed 03 May 2023 03:40:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a1d4f5c
Wed 03 May 2023 03:41:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
e10166e
Wed 03 May 2023 03:42:58 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
4b21245
Wed 03 May 2023 03:43:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
87c803a
Thu 04 May 2023 04:50:11 PM UTC: 
 sudoku.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:27: error: subscripted value is neither array nor pointer nor vector
   65 |               nuevoNodo[k][j] = j+1;
      |                           ^
Compilation failed
d5aab13
Thu 04 May 2023 04:50:28 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:27: error: subscripted value is neither array nor pointer nor vector
   65 |               nuevoNodo[i][k] = j+1;
      |                           ^
Compilation failed
887cfda
